# EPL_ML_PREDICTOR

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  run_backend.sh  run_frontend.sh  run_streamlit_ui.sh  scrape_fifa_ratings.sh  scrape_lineups.sh  train_model.sh
backend/: alembic.ini  config.py  main.py  premier_league.db  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.sh
backend/app/: main.py  schemas.py
backend/app/api/endpoints/: content.py  evaluate.py  fixtures.py  matchweek.py  predict.py  seasons.py  superbru.py  train.py
backend/app/content/: model_explanation.json
backend/app/core/: config.py  logging_config.py  paths.py
backend/app/core/config/: paths.py  setting.py
backend/app/db/: csv_to_db.py  database.py  models.py  queries.py
backend/app/db/loaders/: csv_to_db.py  fixtures.py  player_ratings.py  shooting_stats.py
backend/app/db/mappings/: load_mappings.py  (+2 more)
backend/app/schemas/: __init__.py  requests.py  responses.py
backend/app/services/: seasons_service.py  superbru_service.py
backend/config/: paths.py  setting.py
backend/data_processing/: data_loader.py  feature_encoding.py
backend/development_notebooks/: 1_Scraper.ipynb  2_Training.ipynb  EDA.ipynb
backend/encoders/: team_encoder.pkl  venue_encoder.pkl
backend/models/: config.py  evaluation.py  predict.py  save_load.py  train.py
backend/scripts/: compare_models.py  daily_predict_and_submit.py  daily_update_results.py  feature_importance.py  hourly_predict_and_submit.py  train_all_seasons.py  tune_random_forest.py
backend/tests/: conf_test.py  conftest.py  example_fixtures_data.json  example_predictions_data.json  test_api.py  test_content.py  test_evaluate.py  test_fixtures.py  test_matchweek.py  test_predict.py  test_seasons.py  test_superbru.py  test_train.py
backend/tests/test_web_scraping/: test_helper.py
backend/utils/: data_processing.py  feature_encoding.py  feature_engineering.py  fixtures.py  model_training.py  predictions.py  scraper.py  superbru_points_calculator.py  train.py
backend/web_scraping/: fixtures_scraper.py  superbru_scraper.py
frontend/: Home.py  app.py  logging_config.py  pyproject.toml
frontend/pages/: 1_Model.py
frontend/react_ui/: index.html  package-lock.json  package.json
frontend/react_ui/src/: App.jsx  api.js  index.css
frontend/src/: api.js  index.html
frontend/src/components/: MatchTable.jsx
frontend/streamlit_ui/: Home.py  logging_config.py  pyproject.toml
frontend/streamlit_ui/pages/: 1_Model.py
frontend/tests/: test_ui.py
frontend/utils/: st_helper.py
(+68 files in other folders)
