[project]
name = "epl-ml-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "fuzzywuzzy>=0.18.0",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.42",
    "tensorflow>=2.19.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 88
target-version = "py311"

select = ["E", "F", "I", "B"]
ignore = ["E402", "B006", "B007"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
